objects/Field__c.object
<CustomObject>
    <fields>
        <fullName>TECH_MigrationUniqueID__c</fullName>
        <description>Unique ID to be used by ODASEVA for synchronizing the records between environments</description>
        <externalId>true</externalId>
        <label>Migration Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>app__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>App</label>
        <referenceTo>App__c</referenceTo>
        <relationshipLabel>App Fields</relationshipLabel>
        <relationshipName>AppFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>appdatafieldmap__c</fullName>
        <label>AppDataFieldMap</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>checkbox1field10__c</fullName>
                </value>
                <value>
                    <fullName>checkboxfield1__c</fullName>
                </value>
                <value>
                    <fullName>checkboxfield2__c</fullName>
                </value>
                <value>
                    <fullName>checkboxfield3__c</fullName>
                </value>
                <value>
                    <fullName>checkboxfield4__c</fullName>
                </value>
                <value>
                    <fullName>checkboxfield5__c</fullName>
                </value>
                <value>
                    <fullName>checkboxfield6__c</fullName>
                </value>
                <value>
                    <fullName>checkboxfield7__c</fullName>
                </value>
                <value>
                    <fullName>checkboxfield8__c</fullName>
                </value>
                <value>
                    <fullName>checkboxfield9__c</fullName>
                </value>
                <value>
                    <fullName>numberfield1__c</fullName>
                </value>
                <value>
                    <fullName>textfield10__c</fullName>
                </value>
                <value>
                    <fullName>textfield11__c</fullName>
                </value>
                <value>
                    <fullName>textfield12__c</fullName>
                </value>
                <value>
                    <fullName>textfield13__c</fullName>
                </value>
                <value>
                    <fullName>textfield14__c</fullName>
                </value>
                <value>
                    <fullName>textfield15__c</fullName>
                </value>
                <value>
                    <fullName>textfield16__c</fullName>
                </value>
                <value>
                    <fullName>textfield17__c</fullName>
                </value>
                <value>
                    <fullName>textfield18__c</fullName>
                </value>
                <value>
                    <fullName>textfield19__c</fullName>
                </value>
                <value>
                    <fullName>textfield1__c</fullName>
                </value>
                <value>
                    <fullName>textfield20__c</fullName>
                </value>
                <value>
                    <fullName>textfield21__c</fullName>
                </value>
                <value>
                    <fullName>textfield22__c</fullName>
                </value>
                <value>
                    <fullName>textfield23__c</fullName>
                </value>
                <value>
                    <fullName>textfield24__c</fullName>
                </value>
                <value>
                    <fullName>textfield25__c</fullName>
                </value>
                <value>
                    <fullName>textfield2__c</fullName>
                </value>
                <value>
                    <fullName>textfield3__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>controllingfield__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Controlling Field</description>
        <label>Controlling Field</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You cannot point to a field outside the application or the step</errorMessage>
            <filterItems>
                <field>$Source.app__c</field>
                <operation>equals</operation>
                <valueField>Field__c.app__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.step__c</field>
                <operation>equals</operation>
                <valueField>Field__c.step__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Field__c</referenceTo>
        <relationshipLabel>Dependent Fields</relationshipLabel>
        <relationshipName>controllingfields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>displayname__c</fullName>
        <externalId>true</externalId>
        <label>Display Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fields__c</fullName>
        <label>fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>targetobject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account__c</fullName>
                </value>
                <value>
                    <fullName>LegacyName__c</fullName>
                </value>
                <value>
                    <fullName>LegacyNumber__c</fullName>
                </value>
                <value>
                    <fullName>BillingCity</fullName>
                </value>
                <value>
                    <fullName>BillingState</fullName>
                </value>
                <value>
                    <fullName>ShippingCity</fullName>
                </value>
                <value>
                    <fullName>ShippingState</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>ProductCode</fullName>
                </value>
                <value>
                    <fullName>ExtProductId__c</fullName>
                </value>
                <value>
                    <fullName>Username</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fieldtype__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Textarea</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Reference Field</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Multiselect Picklist</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>helptext__c</fullName>
        <inlineHelpText>help text</inlineHelpText>
        <label>helptext</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdependent__c</fullName>
        <description>technical field dont add this to layout</description>
        <formula>NOT(ISNULL(controllingfield__c) || ISBLANK(controllingfield__c))</formula>
        <inlineHelpText>technical field dont add this to layout</inlineHelpText>
        <label>is Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isreadonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>layoutposition__c</fullName>
        <label>Layout Position</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lookuplistviewid__c</fullName>
        <label>Lookup Listview Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lookuplistviewname__c</fullName>
        <label>Lookup Listview Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lookupsoqlquery__c</fullName>
        <label>Lookup Soql Query</label>
        <length>10002</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>position__c</fullName>
        <formula>section__c &amp;&apos;-&apos;&amp; TEXT( layoutposition__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section - Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referencefield__c</fullName>
        <label>Reference Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UserName</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>referencelookup__c</fullName>
        <label>Reference Lookup</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referencelookupfield__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>reference lookup field</description>
        <inlineHelpText>please select a lookup field which you would use as reference</inlineHelpText>
        <label>Reference Lookup Field</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Field__c.fieldtype__c</field>
                <operation>equals</operation>
                <value>Lookup</value>
            </filterItems>
            <filterItems>
                <field>Field__c.step__c</field>
                <operation>equals</operation>
                <valueField>$Source.step__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Field__c</referenceTo>
        <relationshipLabel>Reference Lookups</relationshipLabel>
        <relationshipName>App_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>section__c</fullName>
        <label>Section</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>step__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Step</label>
        <referenceTo>Step__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>AppStep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>targetobject__c</fullName>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>LegacyAccount__c</fullName>
                </value>
                <value>
                    <fullName>Product2</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>uniquefieldmap__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>uniquefieldmap</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>updatablethroughactiononly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>updatable through action only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>updateparentonchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Parent on Change</label>
        <type>Checkbox</type>
    </fields>
    <label>Field</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Fields</pluralLabel>
    <recordTypes>
        <fullName>Date</fullName>
        <active>true</active>
        <description>Date or Date Time field</description>
        <label>Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>File</fullName>
        <active>true</active>
        <description>File record type</description>
        <label>File</label>
    </recordTypes>
    <recordTypes>
        <fullName>ListofValues</fullName>
        <active>true</active>
        <description>List of Values</description>
        <label>List of Values</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lookup</fullName>
        <active>true</active>
        <description>Reference existing Salesforce Data</description>
        <label>Lookup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Number</fullName>
        <active>true</active>
        <description>Number field</description>
        <label>Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReferenceField</fullName>
        <active>true</active>
        <description>Reference Fields are used to create formula fields which are related to lookup fields</description>
        <label>Reference Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>TextAreaField</fullName>
        <active>true</active>
        <description>Text Area Field</description>
        <label>Text Area Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>TextField</fullName>
        <active>true</active>
        <description>Text Field</description>
        <label>Text Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>checkbox</fullName>
        <active>true</active>
        <description>Boolean (True/False) field</description>
        <label>Checkbox</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Target_Objects_should_be_similar</fullName>
        <active>true</active>
        <description>target objects should be similar</description>
        <errorConditionFormula>AND( 
    $User.BypassVR__c = False, 
    RecordType.Name==&apos;Reference Field&apos; &amp;&amp;  
    TEXT(referencelookupfield__r.targetobject__c)!= TEXT(targetobject__c)
				)</errorConditionFormula>
        <errorDisplayField>targetobject__c</errorDisplayField>
        <errorMessage>Target Object should be the same as the one from the Reference lookup field</errorMessage>
    </validationRules>
</CustomObject>